--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -36,7 +36,7 @@
             }
         }
 
-        span {
+        p {
             @include font-size(36px);
             font-weight: 700;
             color: $title-color;
